--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Worker.dp.ua">
+  <meta property="og:title" content="Worker.dp.ua - Трудоустройство за границей">
+  <meta property="og:description" content="Worker.dp.ua - Трудоустройство за границей">
+  <meta property="og:url" content="https://s3.eu-west-2.amazonaws.com/worker-production/logo.png">
+  <meta property="og:locale" content="ru_RU">
+  <meta property="og:image" content="https://s3.eu-west-2.amazonaws.com/worker-production/logo.png">
+  <meta property="og:image:width" content="968">
+  <meta property="og:image:height" content="504">
   <title>Worker.dp.ua - Трудоустройство за границей</title>
 </head>
 <body>
